--- a/StudyDictionary/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/StudyDictionary/en.lproj/MainStoryboard_iPhone.storyboard
@@ -6,27 +6,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
     <scenes>
-        <!--Second View Controller - Second-->
-        <scene sceneID="13">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="12" sceneMemberID="firstResponder"/>
-                <viewController title="Second" id="3" customClass="SecondViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="17">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="6"/>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="653" y="498"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="15">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14" sceneMemberID="firstResponder"/>
                 <tabBarController id="4" sceneMemberID="viewController">
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="5">
                         <rect key="frame" x="0.0" y="431" width="320" height="49"/>
@@ -35,7 +21,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="rwi-eO-94j" kind="relationship" relationship="viewControllers" id="26"/>
-                        <segue destination="3" kind="relationship" relationship="viewControllers" id="27"/>
+                        <segue destination="3nj-oU-0pI" kind="relationship" relationship="viewControllers" id="27"/>
                     </connections>
                 </tabBarController>
             </objects>
@@ -46,9 +32,8 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sZW-gW-TRG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="rwi-eO-94j" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Dictionary" image="book" id="7"/>
+                    <tabBarItem key="tabBarItem" title="Dictionary" image="book.png" id="7"/>
                     <toolbarItems/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="blackOpaque" id="Szb-tb-fep">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -108,7 +93,7 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="tRV-b4-Lfh">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" id="tRV-b4-Lfh">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -126,14 +111,66 @@
             </objects>
             <point key="canvasLocation" x="1634" y="-138"/>
         </scene>
+        <!--Navigation Controller - Word Lists-->
+        <scene sceneID="ebo-0d-gmP">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kDq-eY-Eqi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="3nj-oU-0pI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Word Lists" image="notepad.png" id="6"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="blackOpaque" id="c17-UW-AFx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ai7-hq-FEG" kind="relationship" relationship="rootViewController" id="tui-bV-vkL"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="653" y="498"/>
+        </scene>
+        <!--List View Controller - Word Lists-->
+        <scene sceneID="ovs-7N-wye">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J4F-Qm-YSO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="Ai7-hq-FEG" customClass="ListViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="taX-JV-SLU">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListCell" id="VRF-gz-WCM">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ai7-hq-FEG" id="Aks-Kh-y7U"/>
+                            <outlet property="delegate" destination="Ai7-hq-FEG" id="1qX-gU-Bn1"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Word Lists" id="mT0-v2-kHA"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="1183" y="498"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="book" width="16" height="16"/>
-        <image name="second" width="16" height="16"/>
+        <image name="book.png" width="18" height="26"/>
+        <image name="notepad.png" width="22" height="28"/>
     </resources>
     <classes>
         <class className="DictionarySearchViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DictionarySearchViewController.h"/>
+        </class>
+        <class className="ListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ListViewController.h"/>
         </class>
         <class className="WordDefinitionViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/WordDefinitionViewController.h"/>
